tests/samples/negative/types/void_local.ax
module void_local;

fn main() -> i32 {
    let x: void = 0;
    return 0;
}
